Adds a parameter is_automatic to the method CupsPrintersManager::PrinterInstalled

Inside the method mentioned above we were not able to distinguish
between manual and automatic printer installation. As a result in both
cases the event metrics::PrinterEventProto::SETUP_MANUAL was reported
and the event metrics::PrinterEventProto::SETUP_AUTOMATIC has never
appeared in logs. To solve this problem I have added bool parameter
is_automatic to the method that carries information about a type of
printer installation. It allows to distinguish between these two cases
and report a correct event.

BUG=chromium:829542

TEST=tested manually on nautilus chrombook

Change-Id: I8d1f3bf70b9b218a734726f2fb1b8ab2af537184
Reviewed-on: https://chromium-review.googlesource.com/1161099
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Sean Kau <skau@chromium.org>
Reviewed-by: Luis Hector Chavez <lhchavez@chromium.org>
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Piotr Pawliczek <pawliczek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580610}
Former-commit-id: c1620c77457f9cfbf6230540bc564630c88a9e92